[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "substrate-interface"
description = "Library for interfacing with a Substrate node"
readme = "README.md"

authors = [
    { name = "Polkascan Foundation", email = "info@polkascan.org" }
]

requires-python = ">=3.7, <4"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]
keywords = ["interface", "polkascan", "polkadot", "substrate", "blockchain", "rpc", "kusama"]

dynamic = ["dependencies", "version"]

[project.optional-dependencies]
dev = [
    "coverage==5.3",
    "pytest>=6.1.2",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-autorefs",
    "mkdocstrings",
    "mkdocstrings[python]"
]

[project.urls]
Homepage = "https://github.com/polkascan/py-substrate-interface"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["contrib", "docs", "tests", "test"]

[tool.setuptools.dynamic]
version = {attr = "substrateinterface.constants.__version__"}
dependencies = {file = ["requirements.txt"]}
